--- a/README.org
+++ b/README.org
@@ -2,9 +2,8 @@
 
 HTML generation on top of monkeylib-text-languages.
 
-|---------+-------------------------------------------|
-| source  | git:https://github.com/gigamonkey/monkeylib-html.git   |
-| commit  | 67efc5d  |
-| systems | monkeylib-html |
-|---------+-------------------------------------------|
-
+|---------+------------------------------------------------------|
+| source  | git:https://github.com/gigamonkey/monkeylib-html.git |
+| commit  | 67efc5d                                              |
+| systems | com.gigamonkeys.html                                 |
+|---------+------------------------------------------------------|
